# dawati-artwork

./: .gitignore  AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
backgrounds/: Makefile.am  dawati-backgrounds.xml.in
cursor/: Makefile  Makefile.am  index.theme
cursor/data/: X_cursor  bd_double_arrow  bottom_left_corner  bottom_right_corner  bottom_side  bottom_tee  circle  crossed_circle  dnd-none  dotbox  fd_double_arrow  hand2  left_ptr  left_ptr_watch  left_side  left_tee  ll_angle  lr_angle  move  pencil  plus  question_arrow  right_ptr  right_side  right_tee  sb_down_arrow  sb_h_double_arrow  sb_left_arrow  sb_right_arrow  sb_up_arrow  sb_v_double_arrow  tcross  top_left_corner  top_right_corner  top_side  top_tee  ul_angle  ur_angle  xterm
cursor/pngs/: make.sh
icons/: Makefile.am  index.theme
icons/24x24/: Makefile.am
icons/48x48/: Makefile.am
sound/: .gitignore  Makefile.am  NEWS  README  configure.ac  index.theme
sound/stereo/: Makefile.am
tools/: create-index-theme.sh
ui/: Makefile.am  index.theme
ui/engine/: Makefile.am  dawati-main.c  dawati-rc-style.c  dawati-rc-style.h  dawati-style.c  dawati-style.h  dawati-utils.c  dawati-utils.h
ui/gtk-2.0/: gtkrc
ui/metacity-1/: metacity-theme-1.xml
