AC_PREREQ([2.63])
AC_INIT([dawati-artwork],
        [0.90.1],
        [http://www.dawati.com])

AC_CONFIG_SRCDIR([sound/index.theme])

AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz])

AC_PROG_LN_S
AC_SUBST(VERSION)

AC_CONFIG_FILES([
  Makefile
  backgrounds/Makefile
  cursor/Makefile
  sound/Makefile
  sound/stereo/Makefile
  ui/Makefile
])
AC_OUTPUT
