
AC_PREREQ([2.60])
AC_INIT([moblin-sound-theme],
        [0.1],
        [http://www.moblin.org])

AC_CONFIG_SRCDIR([index.theme.in])

AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])

AC_PROG_LN_S
AC_SUBST(VERSION)

#IT_PROG_INTLTOOL([0.40.0])
#GETTEXT_PACKAGE=moblin-sound-theme
#AC_SUBST(GETTEXT_PACKAGE)
#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
#AM_GLIB_GNU_GETTEXT

#po/Makefile.in
AC_CONFIG_FILES([
Makefile
stereo/Makefile
])

AC_OUTPUT
