SUBDIRS = engine

THEME_DIR = $(datadir)/themes/Dawati

themedir = $(THEME_DIR)
dist_theme_DATA = index.theme

gtkthemedir = $(THEME_DIR)/gtk-2.0
dist_gtktheme_DATA = gtk-2.0/gtkrc

gtkthemeassetsdir = $(THEME_DIR)/gtk-2.0/Assets
dist_gtkthemeassets_DATA = \
	gtk-2.0/Assets/9-slice-guide.png \
	gtk-2.0/Assets/button-active.png \
	gtk-2.0/Assets/button-disabled.png \
	gtk-2.0/Assets/button-focus.png \
	gtk-2.0/Assets/button-hover.png \
	gtk-2.0/Assets/button.png \
	gtk-2.0/Assets/checkbox-checked-disabled.png \
	gtk-2.0/Assets/checkbox-checked.png \
	gtk-2.0/Assets/checkbox-disabled.png \
	gtk-2.0/Assets/checkbox.png \
	gtk-2.0/Assets/combobox-active.png \
	gtk-2.0/Assets/combobox-disabled.png \
	gtk-2.0/Assets/combobox-focus.png \
	gtk-2.0/Assets/combobox-hover.png \
	gtk-2.0/Assets/combobox-marker-disabled.png \
	gtk-2.0/Assets/combobox-marker-focus.png \
	gtk-2.0/Assets/combobox-marker.png \
	gtk-2.0/Assets/combobox.png \
	gtk-2.0/Assets/entry-active.png \
	gtk-2.0/Assets/entry-disabled.png \
	gtk-2.0/Assets/entry-focus.png \
	gtk-2.0/Assets/entry-hover.png \
	gtk-2.0/Assets/entry.png \
	gtk-2.0/Assets/expander-arrow-down-active.png \
	gtk-2.0/Assets/expander-arrow-down-disabled.png \
	gtk-2.0/Assets/expander-arrow-down-focus.png \
	gtk-2.0/Assets/expander-arrow-down-hover.png \
	gtk-2.0/Assets/expander-arrow-down.png \
	gtk-2.0/Assets/expander-arrow-up-active.png \
	gtk-2.0/Assets/expander-arrow-up-disabled.png \
	gtk-2.0/Assets/expander-arrow-up-focus.png \
	gtk-2.0/Assets/expander-arrow-up-hover.png \
	gtk-2.0/Assets/expander-arrow-up.png \
	gtk-2.0/Assets/expander-closed-active.png \
	gtk-2.0/Assets/expander-closed-disabled.png \
	gtk-2.0/Assets/expander-closed-focus.png \
	gtk-2.0/Assets/expander-closed-hover.png \
	gtk-2.0/Assets/expander-closed.png \
	gtk-2.0/Assets/expander-open-active.png \
	gtk-2.0/Assets/expander-open-disabled.png \
	gtk-2.0/Assets/expander-open-focus.png \
	gtk-2.0/Assets/expander-open-hover.png \
	gtk-2.0/Assets/expander-open.png \
	gtk-2.0/Assets/full-theme.png \
	gtk-2.0/Assets/menu-item.png \
	gtk-2.0/Assets/menu.png \
	gtk-2.0/Assets/pathbar-button-active.png \
	gtk-2.0/Assets/pathbar-button-disabled.png \
	gtk-2.0/Assets/pathbar-button-focus.png \
	gtk-2.0/Assets/pathbar-button-hover.png \
	gtk-2.0/Assets/pathbar-button-last-active.png \
	gtk-2.0/Assets/pathbar-button-last-disabled.png \
	gtk-2.0/Assets/pathbar-button-last-focus.png \
	gtk-2.0/Assets/pathbar-button-last-hover.png \
	gtk-2.0/Assets/pathbar-button-last.png \
	gtk-2.0/Assets/pathbar-button.png \
	gtk-2.0/Assets/plusbox-minus-hover.png \
	gtk-2.0/Assets/plusbox-minus.png \
	gtk-2.0/Assets/plusbox-plus-hover.png \
	gtk-2.0/Assets/plusbox-plus.png \
	gtk-2.0/Assets/progress-bar-background.png \
	gtk-2.0/Assets/progress-bar-background-v.png \
	gtk-2.0/Assets/progress-bar-bar.png \
	gtk-2.0/Assets/progress-bar-bar-v.png \
	gtk-2.0/Assets/radiobutton-checked-disabled.png \
	gtk-2.0/Assets/radiobutton-checked.png \
	gtk-2.0/Assets/radiobutton-disabled.png \
	gtk-2.0/Assets/radiobutton.png \
	gtk-2.0/Assets/scroll-button-down-active.png \
	gtk-2.0/Assets/scroll-button-down-disabled.png \
	gtk-2.0/Assets/scroll-button-down-hover.png \
	gtk-2.0/Assets/scroll-button-down.png \
	gtk-2.0/Assets/scroll-button-left-active.png \
	gtk-2.0/Assets/scroll-button-left-disabled.png \
	gtk-2.0/Assets/scroll-button-left-hover.png \
	gtk-2.0/Assets/scroll-button-left.png \
	gtk-2.0/Assets/scroll-button-right-active.png \
	gtk-2.0/Assets/scroll-button-right-disabled.png \
	gtk-2.0/Assets/scroll-button-right-hover.png \
	gtk-2.0/Assets/scroll-button-right.png \
	gtk-2.0/Assets/scroll-button-up-active.png \
	gtk-2.0/Assets/scroll-button-up-disabled.png \
	gtk-2.0/Assets/scroll-button-up-hover.png \
	gtk-2.0/Assets/scroll-button-up.png \
	gtk-2.0/Assets/scroll-hbackground-disabled.png \
	gtk-2.0/Assets/scroll-hbackground.png \
	gtk-2.0/Assets/scroll-hhandle-active.png \
	gtk-2.0/Assets/scroll-hhandle-disabled.png \
	gtk-2.0/Assets/scroll-hhandle-hover.png \
	gtk-2.0/Assets/scroll-hhandle.png \
	gtk-2.0/Assets/scroll-vbackground-disabled.png \
	gtk-2.0/Assets/scroll-vbackground.png \
	gtk-2.0/Assets/scroll-vhandle-active.png \
	gtk-2.0/Assets/scroll-vhandle-disabled.png \
	gtk-2.0/Assets/scroll-vhandle-hover.png \
	gtk-2.0/Assets/scroll-vhandle.png \
	gtk-2.0/Assets/slider-background-disabled.png \
	gtk-2.0/Assets/slider-background-disabled-v.png \
	gtk-2.0/Assets/slider-background.png \
	gtk-2.0/Assets/slider-background-v.png \
	gtk-2.0/Assets/slider-handle-disabled.png \
	gtk-2.0/Assets/slider-handle-disabled-v.png \
	gtk-2.0/Assets/slider-handle-focus.png \
	gtk-2.0/Assets/slider-handle-focus-v.png \
	gtk-2.0/Assets/slider-handle-hover.png \
	gtk-2.0/Assets/slider-handle-hover-v.png \
	gtk-2.0/Assets/slider-handle.png \
	gtk-2.0/Assets/slider-handle-v.png \
	gtk-2.0/Assets/toggle-background-active.png \
	gtk-2.0/Assets/toggle-background-disabled.png \
	gtk-2.0/Assets/toggle-background.png \
	gtk-2.0/Assets/toggle-handle-active.png \
	gtk-2.0/Assets/toggle-handle-disabled.png \
	gtk-2.0/Assets/toggle-handle-focus.png \
	gtk-2.0/Assets/toggle-handle-hover.png \
	gtk-2.0/Assets/toggle-handle.png \
	gtk-2.0/Assets/toolbar.png \
	$(NULL)

metacitythemedir = $(THEME_DIR)/metacity-1
dist_metacitytheme_DATA = \
	metacity-1/background.png \
	metacity-1/button_close.png \
	metacity-1/button_close_prelight.png \
	metacity-1/button_close_pressed.png \
	metacity-1/metacity-theme-1.xml \
	$(NULL)
