basedir = $(datadir)/icons/dawati/48x48

actionsdir = $(basedir)/actions
dist_actions_DATA = $(srcdir)/actions/*.png

devicesdir = $(basedir)/devices
dist_devices_DATA = $(srcdir)/devices/*.png

placesdir = $(basedir)/places
dist_places_DATA = $(srcdir)/places/*.png

MAINTAINERCLEANFILES = Makefile.in
